replace @ into at

--- a/README
+++ b/README
@@ -7,4 +7,4 @@ So I don't know a correct usage of github and git repo...
 
 If something wrong, plz teach me!
 
-Norio Kobota(nori.0428@gmail.com)
+Norio Kobota(nori.0428_at_gmail.com)
